--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -288,19 +288,41 @@ With all of this in place, remembering the most quintessential first step of get
 It's time to DETOX and PURIFY! And of course, all of this was juuuust a joke!
         </p>
     </div>
-    <div class="references">
-        <h3>Clinical Approach to Post-acute Sequelae After COVID-19 Infection and Vaccination - Scientific Figure on ResearchGate. Available from: https://www.researchgate.net/figure/Abbreviations-ACE2-angiotensin-converting-enzyme-2-FAT-fatty-acid-translocase_fig1_375814234 [accessed 17 Dec 2024]
+ <div class="references">
+    <h3>References</h3>
+    <ul>
+        <li>
+            Clinical Approach to Post-acute Sequelae After COVID-19 Infection and Vaccination - Scientific Figure on ResearchGate. 
+            Available from: <a href="https://www.researchgate.net/figure/Abbreviations-ACE2-angiotensin-converting-enzyme-2-FAT-fatty-acid-translocase_fig1_375814234" target="_blank">
+            ResearchGate</a> [accessed 17 Dec 2024].
+        </li>
+        <li>
+            Akhter J, Quéromès G, Pillai K, Kepenekian V, Badar S, Mekkawy AH, Frobert E, Valle SJ, Morris DL. 
+            The Combination of Bromelain and Acetylcysteine (BromAc) Synergistically Inactivates SARS-CoV-2. 
+            <em>Viruses.</em> 2021 Mar 6;13(3):425. doi: <a href="https://doi.org/10.3390/v13030425" target="_blank">10.3390/v13030425</a>. PMID: 33800932; PMCID: PMC7999995.
+        </li>
+        <li>
+            Tanikawa T, Kiba Y, Yu J, Hsu K, Chen S, Ishii A, Yokogawa T, Suzuki R, Inoue Y, Kitamura M. 
+            Degradative Effect of Nattokinase on Spike Protein of SARS-CoV-2. 
+            <em>Molecules.</em> 2022; 27(17):5405. <a href="https://doi.org/10.3390/molecules27175405" target="_blank">https://doi.org/10.3390/molecules27175405</a>.
+        </li>
+        <li>
+            Matende, N. (2024). <em>Elimination/Neutralization of COVID-19 Vaccine-Produced Spike Protein: Scoping Review.</em> 
+            Mathews Journal of Nutrition & Dietetics. Retrieved from 
+            <a href="https://www.mathewsopenaccess.com/full-text/elimination-neutralization-of-covid-19-vaccine-produced-spike-protein-scoping-review" target="_blank">
+            Mathews Open Access</a>.
+        </li>
+        <li>
+            Proteolytic Targets for SARS-CoV-2 Spike Protein Degradation: Hope for Systemic Detoxification. Anthony M. Kyriakopoulos, M.D., Ph.D., Greg Nigh, N.D., 
+            Peter A. McCullough, M.D., M.P.H., Stephanie Seneff, Ph.D.
+        </li>
+        <li>
+            Halma, M. T., Marik, P. E., & Saleeby, Y. M. (2023). Exploring Autophagy in Treating Spike Protein-related Pathology. 
+            <em>Preprints.</em> <a href="https://doi.org/10.20944/preprints202306.1903.v1" target="_blank">https://doi.org/10.20944/preprints202306.1903.v1</a>.
+        </li>
+    </ul>
+</div>
 
-Akhter J, Quéromès G, Pillai K, Kepenekian V, Badar S, Mekkawy AH, Frobert E, Valle SJ, Morris DL. The Combination of Bromelain and Acetylcysteine (BromAc) Synergistically Inactivates SARS-CoV-2. Viruses. 2021 Mar 6;13(3):425. doi: 10.3390/v13030425. PMID: 33800932; PMCID: PMC7999995.
-
-Tanikawa T, Kiba Y, Yu J, Hsu K, Chen S, Ishii A, Yokogawa T, Suzuki R, Inoue Y, Kitamura M. Degradative Effect of Nattokinase on Spike Protein of SARS-CoV-2. _Molecules_. 2022; 27(17):5405. https://doi.org/10.3390/molecules27175405
-
-Matende, N. (2024). _Elimination/Neutralization of COVID-19 Vaccine-Produced Spike Protein: Scoping Review_. Mathews Journal of Nutrition & Dietetics. Retrieved from [Mathews Open Access](https://www.mathewsopenaccess.com/full-text/elimination-neutralization-of-covid-19-vaccine-produced-spike-protein-scoping-review).
-
-Proteolytic Targets for SARS-CoV-2 Spike Protein Degradation: Hope for Systemic Detoxification Anthony M. Kyriakopoulos, M.D., Ph.D. Greg Nigh, N.D. Peter A. McCullough, M.D., M.P.H. Stephanie Seneff, Ph.D.
-
-Halma,  M. T., Marik,  P. E., & Saleeby,  Y. M. (2023). Exploring Autophagy in Treating Spike Protein-related Pathology. Preprints. https://doi.org/10.20944/preprints202306.1903.v1
-</h3>
    
     </div>
 </section>
