--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -147,56 +147,23 @@ As people were all in this together. It’s us (humanity) vs. the corrupt corpor
         <!-- Tokenomics Section -->
         <section id="tokenomics" class="tokenomics">
             <h2>Tokenomics</h2>
-            <div class="supplements-grid">
-    <div class="supplements-item">
-        <h3>Cocktail of Doom</h3>
-        <p>
-            Nattokinase, Serrapeptase, Bromelain, curcumin, NAC+. The recommended dosage is on the label for each. 
-            Studies show these break down the spike protein, which is responsible for 95% of negative symptoms from this whole thing.
-        </p>
-    </div>
-    <div class="supplements-item">
-        <h3>Natural Supplements</h3>
-        <p>
-            <ul>
-                <li>Dandelion Root tea</li>
-                <li>Cinnamon</li>
-                <li>Vitamin C</li>
-                <li>Resveratrol</li>
-                <li>Diatomaceous Earth</li>
-                <li>Activated Charcoal</li>
-                <li>Castor Oil packs</li>
-                <li>Quercetin</li>
-                <li>Cayenne Pepper</li>
-                <li>Frankincense and Myrrh essential oils</li>
-                <li>PEMF</li>
-                <li>Chlorine Dioxide (CLO2)</li>
-                <li>Wheatgrass juice</li>
-                <li>Pine needle tea</li>
-                <li>Infrared Sauna</li>
-                <li>Biofeedback and bio-resonance therapy</li>
-                <li>Trauma Release Exercises and Emotional therapies</li>
-            </ul>
-        </p>
-    </div>
-    <div class="supplements-item">
-        <h3>Other</h3>
-        <p>
-            <ul>
-                <li>Pharmaceuticals (Talk to your doctor): Ivermectin, EDTA</li>
-                <li>Detox Baths: 1 cup Bentonite Clay, 1/2 cup Baking Soda, 1/2 cup Borax, 1 cup Epsom Salt, essential oils of your choice</li>
-                <li>Getting sunlight, exercise, and quality sleep (Yes, the basics!)</li>
-            </ul>
-        </p>
-    </div>
-</div>
-<p class="closing">
-    With all of this in place, remembering the most quintessential first step of getting your very own UNVAXXED $SPRM, 
-    let's just say that all the nasties won't find your inner temple to be especially hospitable. 
-    The power of the golden $SPRM you now hold is going to be too bright, too shiny for them! 
-    It's time to DETOX and PURIFY! And of course, all of this was juuuust a joke!
-</p>
-
+            <div class="tokenomics-grid">
+                <div class="tokenomics-item">
+                    <i class="fas fa-lock"></i>
+                    <h3>Protected</h3>
+                    <p>Fair Launch. Dev won't dump his load on you. This is because we actually believe in our project and our cause, unlike 99.99% shit coins launched on pump.fun everyday.</p>
+                </div>
+                <div class="tokenomics-item">
+                    <i class="fas fa-users"></i>
+                    <h3>Wallet Distribution of Team Wallets</h3>
+                    <p>Initial buy amount: 8 SOL divided in 4 wallets. Dev 1, Dev 2, Marketing, Giveaways.</p>
+                </div>
+                <div class="tokenomics-item">
+                    <i class="fas fa-chart-line"></i>
+                    <h3>Growth Tactics</h3>
+                    <p>Everybody HODL their seeds, thus the seed bank grows continuously. We have many incentives and challenges to reward those who help us grow.</p>
+                </div>
+            </div>
         </section>
 
 <section id="launch-incentives" class="launch-incentives">
