--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -252,41 +252,56 @@ Everywhere you look, everybody claims their diet is the best one. Nobody seem to
         <div class="step capsule">
             Step 4: Supplements
         </div>
-        <p class="step-explanation">
-            Here are the most recommended supplements to aid in the detoxification of the body from harm caused by the shots and its collateral:
-
-            The "cocktail of doom" for the spike protein: 
-            Nattokinase, Serrapeptase, and Bromelain, curcumin, NAC+. The recommended dosage on the label for each. All of these have been shown in studies to break down the Spike Protein, which is responsible for 95% of negative symptoms from this whole thing. 
-            Other things to add:  
-
-Dandelion Root tea;
-Cinnamon;
-Vitamin C;
-Resveratrol;
-Diatomaceous Earth;
-Activated Charcoal;
-Castor Oil packs;
-Quercetin;
-Cayenne Pepper;
-Frankincense and Myrrh essential oils;
-PEMF;
-Chlorine Dioxide (CLO2);
-Wheatgrass juice;
-Pine needle tea;
-Infrared Sauna;
-Biofeedback and bio resonance therapy;
-Trauma Release Exercises and Emotional therapies;
-
-
-Pharmaceuticals which can help (Talk to your doctor)  Ivermectin. EDTA. Parasites and heavy metals detox, respectively. 
-
-Other:  Detox Baths (1 cup Bentonite Clay, 1/2 cup Baking Soda, 1/2 cup Borax, 1 cup Epsom Salt, Essential oils of your choice)
-Getting sunlight, exercise, and quality sleep. (Yes, the very basics haha!)
-
-
-With all of this in place, remembering the most quintessential first step of getting your very own UNVAXXED $SPRM, let's just say that all the nasties won't find your inner temple to be especially hospitable. The power of the golden $SPRM you now hold is going to be too bright, too shiny for them! 
-It's time to DETOX and PURIFY! And of course, all of this was juuuust a joke!
+<div class="supplements-grid">
+    <div class="supplements-item">
+        <h3>Cocktail of Doom</h3>
+        <p>
+            Nattokinase, Serrapeptase, Bromelain, curcumin, NAC+. The recommended dosage is on the label for each. 
+            Studies show these break down the spike protein, which is responsible for 95% of negative symptoms from this whole thing.
         </p>
+    </div>
+    <div class="supplements-item">
+        <h3>Natural Supplements</h3>
+        <p>
+            <ul>
+                <li>Dandelion Root tea</li>
+                <li>Cinnamon</li>
+                <li>Vitamin C</li>
+                <li>Resveratrol</li>
+                <li>Diatomaceous Earth</li>
+                <li>Activated Charcoal</li>
+                <li>Castor Oil packs</li>
+                <li>Quercetin</li>
+                <li>Cayenne Pepper</li>
+                <li>Frankincense and Myrrh essential oils</li>
+                <li>PEMF</li>
+                <li>Chlorine Dioxide (CLO2)</li>
+                <li>Wheatgrass juice</li>
+                <li>Pine needle tea</li>
+                <li>Infrared Sauna</li>
+                <li>Biofeedback and bio-resonance therapy</li>
+                <li>Trauma Release Exercises and Emotional therapies</li>
+            </ul>
+        </p>
+    </div>
+    <div class="supplements-item">
+        <h3>Other</h3>
+        <p>
+            <ul>
+                <li>Pharmaceuticals (Talk to your doctor): Ivermectin, EDTA</li>
+                <li>Detox Baths: 1 cup Bentonite Clay, 1/2 cup Baking Soda, 1/2 cup Borax, 1 cup Epsom Salt, essential oils of your choice</li>
+                <li>Getting sunlight, exercise, and quality sleep (Yes, the basics!)</li>
+            </ul>
+        </p>
+    </div>
+</div>
+<p class="closing">
+    With all of this in place, remembering the most quintessential first step of getting your very own UNVAXXED $SPRM, 
+    let's just say that all the nasties won't find your inner temple to be especially hospitable. 
+    The power of the golden $SPRM you now hold is going to be too bright, too shiny for them! 
+    It's time to DETOX and PURIFY! And of course, all of this was juuuust a joke!
+</p>
+
     </div>
  <div class="references">
     <h3>References</h3>
