--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -9,6 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="logo.png">   <!-- Logo top left --> 
+        <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Unvaxxed $SPRM - The World's Most Valuable Asset" />
+    <meta property="og:description" content="Join the movement unifying those who stand for purity, integrity, and sovereignty!/>
+    <meta property="og:image" content="sprmking.png" />
+    <meta property="og:url" content="https://sprm.meme/" />
+    <meta property="og:type" content="website" />
 </head>
 <body>
     <header class="header">
