--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -11,8 +11,8 @@
     <link rel="icon" type="image/png" href="logo.png">   <!-- Logo top left --> 
         <!-- Open Graph meta tags -->
     <meta property="og:title" content="Unvaxxed $SPRM - The World's Most Valuable Asset" />
-    <meta property="og:description" content="Join the movement unifying those who stand for purity, integrity, and sovereignty!/>
-    <meta property="og:image" content="sprmking.png" />
+    <meta property="og:description" content="Join the movement unifying those who stand for purity, integrity, and sovereignty!" />
+    <meta property="og:image" content="https://sprm.meme/sprmking.png" />
     <meta property="og:url" content="https://sprm.meme/" />
     <meta property="og:type" content="website" />
 </head>
