--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -215,9 +215,11 @@ As people were all in this together. It’s us (humanity) vs. the corrupt corpor
     <a href="https://phantom.com/download" class="social-button cta-primary" style="background: #800080; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Phantom</a>
     <a href="https://t.me/BullxBetaBot?start=access_6TD0R5G5EMC:same" class="social-button cta-primary" style="background: #00FF00; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Bullx</a>
 </div>
-<img src="https://i.imgur.com/35Ituog.jpeg" alt="How to Buy" class="meme">
- 
 
+ <div style="display: flex; gap: 10px; justify-content: center; align-items: center;">
+        <img src="https://i.imgur.com/35Ituog.jpeg" alt="How to Buy" class="meme">
+  
+    </div>
 
     <div class="capsules">
         <p class="capsule alternate">"Let’s come out the gate with that BCE - Big Coin Energy"</p>
