--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="logo.png">   <!-- Logo top left --> 
         <!-- Open Graph meta tags -->
     <meta property="og:title" content="Unvaxxed $SPRM - The World's Most Valuable Asset" />
-    <meta property="og:description" content="This isn’t just a meme, it’s a movement. Join us as we unite humanity against corporate corruption." />
+    <meta property="og:description" content="Join the movement as we unite humanity against corporate corruption." />
     <meta property="og:image" content="https://sprm.meme/sprmland.png" />
     <meta property="og:url" content="https://sprm.meme/" />
     <meta property="og:type" content="website" />
