--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -78,7 +78,7 @@
                 <div class="contract-info">
                     <h3>Contract Address</h3>
                     <div class="contract-address">
-                        <code>The contract will be available upon launch on December 21st 2024 1pm EST</code>
+                        <code>Gf7yJgJwBJPh2tEyzx66keUXyexniUDP9RtyZrQbpump</code>
                         <button class="copy-button" onclick="copyContract()">
                             <i class="fas fa-copy"></i>
                         </button>
