--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -52,9 +52,9 @@
             <div class="hero-content">
                 <h1>Unvaxxed $SPRM</h1>
                 <p class="subtitle">The world's most valuable asset</p>
-                <div class="cta-buttons">
-                    <a href="https://t.me/unvaxxedsprm" class="cta-primary">Join Telegram</a>
-                </div>
+<div class="cta-buttons">
+ <a href="https://t.me/unvaxxedsprm" class="cta-primary">Join Telegram</a> <a href="https://jup.ag/swap/SOL-Gf7yJgJwBJPh2tEyzx66keUXyexniUDP9RtyZrQbpump" class="cta-primary">Buy Now</a> 
+</div>
             </div>
         </section>
 
