--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://sprm.meme/sprmland.png" />
     <meta property="og:url" content="https://sprm.meme/" />
     <meta property="og:type" content="website" />
-    <div id="integrated-terminal" style="width: 400px; height: 568px;"></div>
+    <script src='https://terminal.jup.ag/main-v3.js'></script>
 </head>
 <body>
     <header class="header">
