--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -84,17 +84,22 @@
                             <i class="fas fa-copy"></i>
                         </button>
                     </div>
-                    <div id="integrated-terminal" style="width: 400px; height: 568px;">
+                    <div id="integrated-terminal" style="width: 400px; height: 400px;">
 <script>
 
 window.Jupiter.init({
   displayMode: "integrated",
   integratedTargetId: "integrated-terminal",
   endpoint: "https://broken-alpha-water.solana-mainnet.quiknode.pro/3005ec1890a1676de8084f1c95646cb15c9543c0",
-  strictTokenList: false,
+  strictTokenList: true,
+  tokenList: [
+    { address: "So11111111111111111111111111111111111111112", name: "Solana (SOL)" },
+    { address: "Gf7yJgJwBJPh2tEyzx66keUXyexniUDP9RtyZrQbpump", name: "$SPRM" }
+  ],
   formProps: {
+    fixedInputMint: "So11111111111111111111111111111111111111112", // SOL mint address
     fixedOutputMint: true,
-    initialAmount: "1000000000",
+    initialAmount: "1000000000", // Initial amount in lamports (1 SOL = 1,000,000,000 lamports)
     initialOutputMint: "Gf7yJgJwBJPh2tEyzx66keUXyexniUDP9RtyZrQbpump",
     initialSlippageBps: 5,
   },
