--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -63,7 +63,7 @@
             <h2>Are you ready to be Unvaxxed?</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p> Unvaxxed $SPRM is a groundbreaking meme token on the Solana blockchain, launching on December 21st, 2024, at 1 PM EST. Right now the whole market is filled with junk. It's leaking everywhere. We seek to put an end to this corruption. Here, we’re bringing back the gold standard. A meme so potent it can get your wallet (and your friends’ wallets) pregnant. This is the power of the omnipotent $SPRM! Hold onto your seed! </p>
+                    <p style="text-align: center;"> Unvaxxed $SPRM is a groundbreaking meme token on the Solana blockchain, launched on December 21st, 2024, at 1 PM EST. Right now the whole market is filled with junk. It's leaking everywhere. We seek to put an end to this corruption. Here, we’re bringing back the gold standard. A meme so potent it can get your wallet (and your friends’ wallets) pregnant. This is the power of the omnipotent $SPRM! Hold onto your seed! </p>
                     <div class="about-social">
                         <a href="https://t.me/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-telegram"></i>
