--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -85,7 +85,11 @@
                         </button>
                     </div>
                     <div id="integrated-terminal" style="width: 400px; height: 400px;">
-<script>
+
+                           <section class="funny-section">
+            <h2>GET YOUR LOAD OF $SPRM</h2>
+            <p>Use the Jupter Terminal to aquire the world's most valuable asset now!</p>
+         <script>
 
 window.Jupiter.init({
   displayMode: "integrated",
@@ -107,6 +111,9 @@ window.Jupiter.init({
 });
 
 </script>
+            </div>
+        </section>
+
 
 </div>
                 </div>
