--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -63,7 +63,7 @@
             <h2>Are you ready to be Unvaxxed?</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p> Unvaxxed $SPRM is a groundbreaking meme token on the Solana blockchain, launched on December 21st, 2024, at 1 PM EST. Right now the whole market is filled with junk. It's leaking everywhere. We seek to put an end to this corruption. Here, we’re bringing back the gold standard. A meme so potent it can get your wallet (and your friends’ wallets) pregnant. This is the power of the omnipotent $SPRM! Hold onto your seed! </p>
+                    <p> Unvaxxed $SPRM is a groundbreaking meme token on the Solana blockchain, launching on December 21st, 2024, at 1 PM EST. Right now the whole market is filled with junk. It's leaking everywhere. We seek to put an end to this corruption. Here, we’re bringing back the gold standard. A meme so potent it can get your wallet (and your friends’ wallets) pregnant. This is the power of the omnipotent $SPRM! Hold onto your seed! </p>
                     <div class="about-social">
                         <a href="https://t.me/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-telegram"></i>
@@ -84,13 +84,8 @@
                             <i class="fas fa-copy"></i>
                         </button>
                     </div>
-                   
-
-                           <section class="funny-section">
-            <h2>GET YOUR LOAD OF $SPRM</h2>
-            <p>Use the Jupter Terminal to aquire the world's most valuable asset now!</p>
-   <div id="integrated-terminal" style="width: 400px; height: 400px;">
-         <script>
+                    <div id="integrated-terminal" style="width: 400px; height: 400px;">
+<script>
 
 window.Jupiter.init({
   displayMode: "integrated",
@@ -112,9 +107,6 @@ window.Jupiter.init({
 });
 
 </script>
-            </div>
-        </section>
-
 
 </div>
                 </div>
